--- a/fav/mal/mal.css
+++ b/fav/mal/mal.css
@@ -58,15 +58,15 @@ ul li.active a{
 	transform:translate(-50%,-50%);
 }
 .btn{
-	border:1px solid #fff;
+	border:1px solid black;
 	padding:10px 30px;
-	color:white;
+	color:black;
 	text-decoration: none;
 	transition:0.6 ease;
 }
 .btn:hover{  
-	background-color:white;
-	color:#000;
+	background-color:black;
+	color:white;
  }
  .copy p{
  	position:absolute;
